<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayKhfif"
    tools:context=".ForgotPWD_R_SUCCESS">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/HomePage_circle_desc"
        android:rotation="90"
        android:scaleType="fitXY"
        android:src="@drawable/top_left_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lockICONS"
        android:layout_width="103dp"
        android:layout_height="117dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/padlocksuccess" />


    <TextView
        android:id="@+id/Forgot_PWD_S_h0"
        android:layout_width="304dp"
        android:layout_height="129dp"
        android:layout_marginTop="28dp"
        android:text="@string/ForgotPWD_R_SUCC_txt0"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/ForgotPWD_S_h2"
        android:layout_width="312dp"
        android:layout_height="116dp"
        android:layout_marginTop="16dp"
        android:text="@string/ForgotPWD_R_SUCC_txt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forgot_PWD_S_h0" />

    <Button
        android:id="@+id/ForgotPWD_R_Submit"
        android:layout_width="293dp"
        android:layout_height="67dp"
        android:layout_marginTop="49dp"
        android:backgroundTint="@color/limouniKhfif"
        android:text="@string/ReturnToLogin"
        android:textColor="@color/grayKhfif"
        android:textColorLink="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Please Check Your Email To Change your Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPWD_S_h2" />

</androidx.constraintlayout.widget.ConstraintLayout>