<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayKhfif"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/HomePage_circle_desc"
        android:rotation="90"
        android:scaleType="fitXY"
        android:src="@drawable/top_left_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Login_title_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="76dp"
        android:text="@string/Register_Title_H1"
        android:textColor="#0B0A0A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/Register_title_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Register_Title_H2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_title_h1" />

    <Button
        android:id="@+id/LoginBTN"
        android:layout_width="293dp"
        android:layout_height="67dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/limouniKhfif"
        android:text="@string/Login_btn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_forgot_pwd"
        app:layout_constraintVertical_bias="0.303" />

    <EditText
        android:id="@+id/Login_pwd"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Enter your password"
        android:inputType="text"
        android:padding="10dp"
        android:password="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_email" />

    <EditText
        android:id="@+id/Login_email"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Enter your email "
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_title_h2" />

    <TextView
        android:id="@+id/Login_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Login_buttom_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBTN" />

    <TextView
        android:id="@+id/Login_forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Login_forgot_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_pwd" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="161dp"
        android:layout_height="291dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.043"
        app:srcCompat="@drawable/phone_icon" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="135dp"
        android:layout_height="80dp"
        android:layout_marginStart="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/Register_title_h2"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/notification_bubbles" />

</androidx.constraintlayout.widget.ConstraintLayout>