<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayKhfif"
    tools:context=".Register">


    <Button
        android:id="@+id/Register"
        android:layout_width="293dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/limouniKhfif"
        android:text="@string/Register_submit_btn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_confirmPWD" />

    <EditText
        android:id="@+id/Register_confirmPWD"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Confirm password"
        android:inputType="text"
        android:padding="10dp"
        android:password="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_password" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/HomePage_circle_desc"
        android:rotation="90"
        android:scaleType="fitXY"
        android:src="@drawable/top_left_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Register_title_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="76dp"
        android:text="@string/Register_Title_H1"
        android:textColor="#090909"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/Register_title_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/Register_Title_H2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_title_h1" />

    <EditText
        android:id="@+id/Register_fullName"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Enter your full name "
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_title_h2" />

    <EditText
        android:id="@+id/Register_password"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Enter your password "
        android:inputType="text"
        android:padding="10dp"
        android:password="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_email" />

    <EditText
        android:id="@+id/Register_email"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Enter your email "
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_fullName" />

    <TextView
        android:id="@+id/Register_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Register_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register" />

</androidx.constraintlayout.widget.ConstraintLayout>


